--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -37,6 +37,9 @@
       href: resource-manager-tutorial-deploy-sql-extensions-bacpac.md
     - name: Artefacten beveiligen
       href: resource-manager-tutorial-secure-artifacts.md
+    - name: Continue integratie met Azure-pijplijnen
+      displayName: DevOps
+      href: resource-manager-tutorial-use-azure-pipelines.md
     - name: Veilige implementatiemethoden gebruiken
       displayName: adm
       href: deployment-manager-tutorial.md
