--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -59,12 +59,20 @@
           href: concepts-business-continuity.md
         - name: Back-ups en herstellen
           href: concepts-backup.md
-    - name: Controleren
+    - name: Controleren en afstemmen
       items:
         - name: Controleren
           href: concepts-monitoring.md
-        - name: Serverlogboeken
+        - name: Logboeken voor langzame query's
           href: concepts-server-logs.md
+        - name: Auditlogboeken
+          href: concepts-audit-logs.md
+        - name: Query Store
+          href: concepts-query-store.md
+        - name: Inzicht in queryprestaties
+          href: concepts-query-performance-insight.md
+        - name: Aanbevelingen voor prestaties
+          href: concepts-performance-recommendations.md
     - name: Ontwikkeling
       items:
         - name: Compatibiliteit van stuurprogramma's en hulpprogramma's
@@ -75,6 +83,8 @@
       items:
         - name: Replicatie van binnenkomende gegevens
           href: concepts-data-in-replication.md
+        - name: Leesreplica's
+          href: concepts-read-replicas.md
 - name: Handleidingen
   items:
     - name: Firewall-regels
@@ -113,10 +123,16 @@
           href: howto-auto-grow-storage-portal.md
     - name: Serverlogboeken openen
       items:
-        - name: Azure Portal
-          href: howto-configure-server-logs-portal.md
-        - name: Azure-CLI
-          href: howto-configure-server-logs-cli.md
+        - name: Logboeken voor langzame query's
+          items:
+            - name: Azure Portal
+              href: howto-configure-server-logs-portal.md
+            - name: Azure-CLI
+              href: howto-configure-server-logs-cli.md
+        - name: Auditlogboeken
+          items:
+            - name: Azure Portal
+              href: howto-configure-audit-logs-portal.md
     - name: Controleren
       items:
         - name: Waarschuwingen maken op basis van metrische gegevens
@@ -125,6 +141,8 @@
       items:
         - name: Replicatie van binnenkomende gegevens configureren
           href: howto-data-in-replication.md
+        - name: Leesreplica's maken in de Azure-portal
+          href: howto-read-replicas-portal.md
     - name: Problemen oplossen
       items:
         - name: Verbindingsfouten oplossen
