--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -233,7 +233,7 @@
           href: search-query-lucene-examples.md
         - name: moreLikeThis (preview)
           href: search-more-like-this.md
-    - name: Gegevens filteren en sorteren
+    - name: Filters gebruiken
       items:
         - name: Filteroverzicht
           href: search-filters.md
@@ -241,8 +241,10 @@
           href: search-filters-facets.md
         - name: Facetnavigatie toevoegen
           href: search-faceted-navigation.md
-        - name: Syntaxis en voorbeelden voor filteren en sorteren op expressies
-          href: query-odata-filter-orderby-syntax.md
+        - name: Problemen met verzamelingsfilters oplossen
+          href: search-query-troubleshoot-collection-filters.md
+        - name: Begrip van verzamelingsfilters
+          href: search-query-understand-collection-filters.md
     - name: Resultaten verwerken
       items:
         - name: Paginagerelateerde functies
@@ -283,6 +285,32 @@
       href: search-api-preview.md
     - name: Resource Manager-sjabloon
       href: /azure/templates/microsoft.search/searchservices
+    - name: Naslaginformatie over de OData-taal
+      items:
+        - name: Overzicht
+          href: query-odata-filter-orderby-syntax.md
+        - name: $filter
+          href: search-query-odata-filter.md
+        - name: $orderby
+          href: search-query-odata-orderby.md
+        - name: $select
+          href: search-query-odata-select.md
+        - name: 'any, all'
+          href: search-query-odata-collection-operators.md
+        - name: 'eq, ne, gt, lt, ge, le'
+          href: search-query-odata-comparison-operators.md
+        - name: 'search.ismatch, search.ismatchscoring'
+          href: search-query-odata-full-text-search-functions.md
+        - name: 'geo.distance, geo.intersects'
+          href: search-query-odata-geo-spatial-functions.md
+        - name: 'and, or, not'
+          href: search-query-odata-logical-operators.md
+        - name: search.in
+          href: search-query-odata-search-in-function.md
+        - name: search.score
+          href: search-query-odata-search-score-function.md
+        - name: Grammatica van de OData-taal
+          href: search-query-odata-syntax-reference.md
     - name: Verwijzing voor cognitieve vaardigheden
       href: cognitive-search-predefined-skills.md
       items:
