--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -54,8 +54,14 @@
               href: azure-security-disk-encryption-overview.md
             - name: Snelstartgidsen
               items:
-                - name: Virtuele machine versleutelen - Azure PowerShell
-                  href: quick-encrypt-vm-powershell.md
+                - name: Een virtuele Linux-machine versleutelen met behulp van Azure CLI
+                  href: azure-disk-encryption-linux-cli-quickstart.md
+                - name: Een virtuele Linux-machine versleutelen met behulp van Azure PowerShell
+                  href: azure-disk-encryption-linux-powershell-quickstart.md
+                - name: Een virtuele Windows-machine versleutelen met behulp van Azure CLI
+                  href: azure-disk-encryption-windows-cli-quickstart.md
+                - name: Een virtuele Windows-machine versleutelen met behulp van Azure PowerShell
+                  href: azure-disk-encryption-windows-powershell-quickstart.md
             - name: Azure Disk Encryption
               items:
                 - name: Vereisten voor schijfversleuteling
