--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -16,6 +16,10 @@
       href: manage-app-groups.md
     - name: 5. Een hostpool voor het valideren van service-updates maken
       href: create-validation-host-pool.md
+    - name: 6. Een hulpprogramma voor beheer implementeren
+      href: manage-resources-using-ui.md
+    - name: 7. Servicewaarschuwingen instellen
+      href: set-up-service-alerts.md
 - name: Uitleg
   items:
     - name: Verbinding maken met Windows Virtual Desktop-resources
@@ -40,6 +44,8 @@
       href: configure-vm-gpu.md
     - name: Sessiehosts automatisch schalen
       href: set-up-scaling-script.md
+    - name: RDP-eigenschappen aanpassen
+      href: customize-rdp-properties.md
 - name: Concepten
   items:
     - name: Windows Virtual Desktop-omgeving
