--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -85,9 +85,10 @@
           items:
             - name: Prestaties optimaliseren
               href: storage-performance.md
-        - name: Geoptimaliseerde GPU
-          href: sizes-gpu.md
+        - name: Versnelde berekeningen
           items:
+            - name: Geoptimaliseerde GPU
+              href: sizes-gpu.md
             - name: GPU-stuurprogramma's instellen
               href: n-series-driver-setup.md
         - name: Krachtig rekenvermogen
