--- a/articles/active-directory/devices/index.yml
+++ b/articles/active-directory/devices/index.yml
@@ -16,7 +16,7 @@ metadata:
   ms.date: 08/14/2018
   ms.author: joflore
 abstract:
-  description: 'Uw gebruikers krijgen via apparaten in Azure AD toegang tot uw zakelijke assets. Als u als ICT-beheerder uw bedrijfsmiddelen wilt beschermen, moet u deze apparaatidentiteiten beschermen in Azure AD. Zo kunt u ervoor zorgen dat uw gebruikers toegang tot uw bronnen hebben vanaf apparaten die voldoen aan uw normen voor beveiliging en naleving.<br>Apparaatidentiteitsbeheer vormt ook de basis voor scenario''s met apparaatgebaseerde voorwaardelijke toegang. Met voorwaardelijke toegang op basis van apparaat kunt u ervoor zorgen dat toegang tot bronnen in uw omgeving alleen mogelijk is met beheerde apparaten.'
+  description: 'Uw gebruikers krijgen via apparaten in Azure AD toegang tot uw zakelijke assets. Als u als ICT-beheerder uw bedrijfsmiddelen wilt beschermen, moet u deze apparaatidentiteiten beschermen in Azure AD. Zo kunt u ervoor zorgen dat uw gebruikers toegang tot uw bronnen hebben vanaf apparaten die voldoen aan uw normen voor beveiliging en naleving.<br>Apparaatidentiteitsbeheer vormt ook de basis voor scenario''s met apparaatgebaseerde voorwaardelijke toegang. Met apparaatgebaseerde voorwaardelijke toegang kunt u ervoor zorgen dat toegang tot resources in uw omgeving alleen mogelijk is via beheerde apparaten.'
 sections:
   - title: Zelfstudies met stapsgewijze instructies
     items:
