--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -11,10 +11,10 @@
 - name: Snelstartgidsen
   expanded: true
   items:
-    - name: Functie maken - Visual Studio
-      href: functions-create-your-first-function-visual-studio.md
     - name: Functie maken - Visual Studio Code
       href: functions-create-first-function-vs-code.md
+    - name: Functie maken - Visual Studio
+      href: functions-create-your-first-function-visual-studio.md
     - name: Functie maken - Java/Maven
       href: functions-create-first-java-maven.md
     - name: Functie maken - Python
@@ -65,7 +65,9 @@
       href: ../iot-edge/tutorial-deploy-function.md?toc=%2fazure%2fazure-functions%2ftoc.json
 - name: Voorbeelden
   items:
-    - name: Codevoorbeelden
+    - name: Azure Serverless Community Library
+      href: 'https://www.serverlesslibrary.net/'
+    - name: Azure-voorbeelden
       href: 'https://azure.microsoft.com/resources/samples/?service=functions'
     - name: Azure-CLI
       href: functions-cli-samples.md
@@ -74,10 +76,12 @@
     - name: Versies 1.x en 2.x vergelijken
       href: functions-versions.md
       displayName: 'migrate, migration'
-    - name: Premium-abonnement
-      href: functions-premium-plan.md
     - name: Schaal en hosting
       href: functions-scale.md
+    - name: Premium-abonnement
+      href: functions-premium-plan.md
+    - name: Implementaties
+      href: functions-deployment-technologies.md
     - name: Triggers en bindingen
       items:
         - name: Over triggers en bindings
