--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -200,24 +200,14 @@
           href: luis-tutorial-bing-spellcheck.md
         - name: Met spraakservice
           href: ../speech-service/how-to-recognize-intents-from-speech-csharp.md?toc=/azure/cognitive-services/luis/toc.json&bc=/azure/cognitive-services/luis/breadcrumb/toc.json
-        - name: Met een bot
+        - name: Bot met Application Insights
           items:
-            - name: Web-app-bot
-              items:
-                - name: Node.js
-                  displayName: 'ABS, azure bot, service'
-                  href: luis-nodejs-tutorial-build-bot-framework-sample.md
-                - name: 'C#'
-                  displayName: 'ABS, azure bot, service'
-                  href: luis-csharp-tutorial-build-bot-framework-sample.md
-            - name: Application Insights
-              items:
-                - name: Node.js
-                  displayName: 'Application insight, kusto'
-                  href: luis-tutorial-function-appinsights.md
-                - name: 'C#'
-                  displayName: 'Application insight, kusto'
-                  href: luis-tutorial-bot-csharp-appinsights.md
+            - name: Node.js
+              displayName: 'Application insight, kusto'
+              href: luis-tutorial-bot-nodejs-appinsights.md
+            - name: 'C#'
+              displayName: 'Application insight, kusto'
+              href: luis-tutorial-bot-csharp-appinsights.md
     - name: Nauwkeurigheid van voorspelling verbeteren
       items:
         - name: Het dashboard gebruiken
