--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -89,12 +89,14 @@
               href: container-registry-auth-aks.md
         - name: Inhoud vertrouwen
           href: container-registry-content-trust.md
-    - name: Compileren en patchen
+    - name: ACR-taken
       items:
-        - name: ACR-taken
+        - name: Overzicht van ACR-taken
           href: container-registry-tasks-overview.md
         - name: Taken met meerdere stappen
           href: container-registry-tasks-multi-step.md
+        - name: Gebruiken met beheerde identiteit
+          href: container-registry-tasks-authentication-managed-identity.md
     - name: Registers en andere Azure-services
       items:
         - name: Azure Container Instances
