--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -49,6 +49,8 @@
           href: data-box-gateway-troubleshoot.md
     - name: Releaseopmerkingen
       items:
+        - name: 1905 - nu
+          href: data-box-gateway-1905-release-notes.md
         - name: Algemene beschikbaarheid
           href: data-box-gateway-release-notes.md
 - name: Data Box Edge
@@ -109,6 +111,8 @@
           href: data-box-edge-return-device.md
     - name: Releaseopmerkingen
       items:
+        - name: 1905 - nu
+          href: data-box-gateway-1905-release-notes.md
         - name: Algemene beschikbaarheid
           href: data-box-gateway-release-notes.md
 - name: Resources
