--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -64,7 +64,9 @@ landingContent:
         links:
           - text: Een transparante gateway configureren
             url: how-to-create-transparent-gateway.md
-          - text: Verbinding maken met een downstream-apparaat
+          - text: Een downstream-apparaat verifiëren voor Azure IoT Hub
+            url: how-to-authenticate-downstream-device.md
+          - text: Een downstream-apparaat aan een gateway koppelen
             url: how-to-connect-downstream-device.md
   - title: Voorbereiden op productiescenario's
     linkLists:
