--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -79,8 +79,7 @@
           displayName: 'Basic Sample, training, classification, sample 5'
           href: ui-sample-classification-predict-churn.md
     - name: Azure Open-gegevenssets
-      href: 'https://docs.microsoft.com/azure/open-datasets/samples'
-      maintainContext: true
+      href: /azure/open-datasets/samples?context=azure/machine-learning/service/context/ml-context
 - name: Concepten
   items:
     - name: Werkruimte
@@ -98,7 +97,7 @@
     - name: Modelbeheer (MLOps)
       displayName: 'deploy, deployment, mlops, operationalize, operationalization'
       href: concept-model-management-and-deployment.md
-    - name: Herbruikbare ML-pijplijnen
+    - name: Machine learning-pijplijnen
       href: concept-ml-pipelines.md
     - name: Interpreteerbaarheid van modellen
       displayName: explainability
@@ -119,6 +118,8 @@
           href: how-to-enable-virtual-network.md
         - name: Webservices beveiligen met SSL
           href: how-to-secure-web-service.md
+        - name: Opslagtoegangssleutels opnieuw genereren
+          href: how-to-change-storage-access-key.md
 - name: Handleidingen
   items:
     - name: Werkruimten beheren
@@ -177,10 +178,12 @@
           href: how-to-set-up-training-targets.md
         - name: Schattingen maken tijdens training
           href: how-to-train-ml-models.md
-        - name: PyTorch gebruiken
-          href: how-to-train-pytorch.md
         - name: Tensorflow gebruiken
           href: how-to-train-tensorflow.md
+        - name: Keras gebruiken
+          href: how-to-train-keras.md
+        - name: PyTorch gebruiken
+          href: how-to-train-pytorch.md
         - name: Hyperparameters afstemmen
           displayName: parameter
           href: how-to-tune-hyperparameters.md
@@ -191,6 +194,9 @@
           href: how-to-manage-runs.md
         - name: Metrische gegevens registreren voor trainingsuitvoeringen
           href: how-to-track-experiments.md
+        - name: Experimenten bijhouden met MLflow
+          displayName: 'log, monitor, metrics'
+          href: how-to-use-mlflow.md
     - name: Machine learning automatiseren
       displayName: 'automl, auto ml'
       items:
@@ -215,8 +221,9 @@
         - name: FPGAs
           href: how-to-deploy-fpga-web-service.md
         - name: IoT Edge
-          href: ../../iot-edge/tutorial-deploy-machine-learning.md
-          maintainContext: true
+          href: /azure/iot-edge/tutorial-deploy-machine-learning?context=azure/machine-learning/service/context/ml-context
+        - name: Aangepaste Docker-afbeelding
+          href: how-to-deploy-custom-docker-image.md
         - name: Problemen oplossen
           href: how-to-troubleshoot-deployment.md
     - name: Webservices gebruiken
@@ -241,8 +248,7 @@
           href: how-to-create-your-first-pipeline.md
         - name: CI/CD van ML-werkstromen met Azure-pijplijnen
           displayName: 'continuous, integration, delivery'
-          href: /azure/devops/pipelines/targets/azure-machine-learning
-          mainContext: true
+          href: /azure/devops/pipelines/targets/azure-machine-learning?context=azure/machine-learning/service/context/ml-context
     - name: Resourcequota beheren
       displayName: limits
       href: how-to-manage-quotas.md
@@ -366,8 +372,7 @@
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-machine-learning'
     - name: Onze ML-producten vergelijken
-      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
-      maintainContext: true
+      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/service/context/ml-context
     - name: Wat is er gebeurd met Workbench?
       displayName: desktop ui Workbench upgrade update transfer
       href: overview-what-happened-to-workbench.md
