--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -83,22 +83,26 @@
           href: sql-database-design-first-database.md
         - name: Database ontwerpen met .NET
           href: sql-database-design-first-database-csharp.md
-    - name: Migreren naar SQL Database
+    - name: Singleton-database
       items:
         - name: Migreren naar een individuele of pooldatabase met DMS
           href: ../dms/tutorial-sql-server-to-azure-sql.md?toc=/azure/sql-database/toc.json
-        - name: Migreren naar een beheerd exemplaar met DMS
+        - name: Een geografisch gedistribueerde database implementeren
+          href: sql-database-implement-geo-distributed-database.md
+        - name: Azure SQL Data Sync instellen
+          href: sql-database-get-started-sql-data-sync.md
+    - name: Beheerd exemplaar
+      items:
+        - name: Online migreren met behulp van DMS
           href: ../dms/tutorial-sql-server-to-managed-instance.md?toc=/azure/sql-database/toc.json
+        - name: Transactionele replicatie configureren
+          href: replication-with-sql-database-managed-instance.md
     - name: Beveiliging in SQL Database
       items:
         - name: Beveiliging van individuele en pooldatabases
           href: sql-database-security-tutorial.md
         - name: Beveiliging van een beheerd exemplaar
           href: sql-database-managed-instance-aad-security-tutorial.md
-    - name: Een geografisch gedistribueerde database implementeren
-      href: sql-database-implement-geo-distributed-database.md
-    - name: Azure SQL Data Sync instellen
-      href: sql-database-get-started-sql-data-sync.md
     - name: Machine Learning Services
       items:
         - name: Een voorspellend model in R bouwen
@@ -500,8 +504,6 @@
           href: sql-database-managed-instance-find-management-endpoint-ip-address.md
         - name: Ingebouwde firewall-beveiliging controleren
           href: sql-database-managed-instance-management-endpoint-verify-built-in-firewall.md
-        - name: Transactionele replicatie
-          href: replication-with-sql-database-managed-instance.md
         - name: Detectie van bedreigingen instellen
           href: sql-database-managed-instance-threat-detection.md
         - name: Toepassingen koppelen
