--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -82,10 +82,10 @@
           items:
             - name: Prestaties optimaliseren
               href: storage-performance.md
-        - name: Geoptimaliseerde GPU
-          displayName: NV NVv2 NC NCv2 NCv3 ND
-          href: sizes-gpu.md
+        - name: Versnelde berekeningen
           items:
+            - name: Geoptimaliseerde GPU
+              href: sizes-gpu.md
             - name: GPU-stuurprogramma's instellen
               href: n-series-driver-setup.md
         - name: Krachtig rekenvermogen
