--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -15,6 +15,8 @@
       href: cognitive-services-apis-create-account.md
     - name: Verificatie
       href: authentication.md
+    - name: Diagnostische logboeken
+      href: diagnostic-logging.md
 - name: Resources
   items:
     - name: Azure-roadmap
