--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: Wat is Azure DNS?
       href: dns-overview.md
+    - name: Wat is privé-DNS in Azure?
+      href: private-dns-overview.md
 - name: Snelstartgidsen
   expanded: true
   items:
@@ -20,7 +22,7 @@
     - name: Aangepaste DNS-records voor een web-app maken
       href: dns-web-sites-custom-domain.md
     - name: Een persoonlijke DNS-zone en -record maken
-      href: private-dns-getstarted-powershell.md
+      href: private-dns-portal.md
     - name: Aliasrecords voor Traffic Manager
       href: tutorial-alias-tm.md
     - name: Aliasrecords voor openbare IP-adressen
@@ -33,6 +35,12 @@
       href: cli-samples.md
 - name: Concepten
   items:
+    - name: Privé-DNS
+      items:
+        - name: Veelgestelde vragen over privé-DNS
+          href: dns-faq-private.md
+        - name: Scenario's voor persoonlijke DNS-zones
+          href: private-dns-scenarios.md
     - name: Zones en records
       href: dns-zones-records.md
     - name: Aliasrecords
@@ -41,10 +49,6 @@
       href: dns-domain-delegation.md
     - name: Veelgestelde vragen
       href: dns-faq.md
-    - name: Persoonlijke DNS-zones gebruiken
-      href: private-dns-overview.md
-    - name: Scenario's voor persoonlijke DNS-zones
-      href: private-dns-scenarios.md
     - name: DNS-statistieken en -waarschuwingen
       href: dns-alerts-metrics.md
     - name: Omgekeerde DNS-lookup
@@ -53,8 +57,12 @@
       href: ../networking/disaster-recovery-dns-traffic-manager.md
 - name: Procedures
   items:
-    - name: Een persoonlijke DNS-zone en -record maken - Azure CLI
-      href: private-dns-getstarted-cli.md
+    - name: Privé-DNS
+      items:
+        - name: Privézone maken - CLI
+          href: private-dns-getstarted-cli.md
+        - name: Privézone maken - PowerShell
+          href: private-dns-getstarted-powershell.md
     - name: Aliasrecords voor web-apps met gelijke taakverdeling
       href: dns-alias-appservice.md
     - name: DNS-zones beheren
