--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -40,6 +40,8 @@
               href: connect-azure-atp.md
             - name: Verbinding maken met Azure Security Center
               href: connect-azure-security-center.md
+            - name: Verbinding maken met de domeinnaamserver
+              href: connect-dns.md
             - name: Verbinding maken met Microsoft Web Application Firewall
               href: connect-microsoft-waf.md
             - name: Verbinding maken met Windows-firewall
