--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -8,9 +8,9 @@
   items:
     - name: 1. Een tenant maken in Windows Virtual Desktop
       href: tenant-setup-azure-active-directory.md
-    - name: 2. Service-principals en roltoewijzingen maken met PowerShell
+    - name: 2. Service-principals en roltoewijzingen maken met behulp van PowerShell
       href: create-service-principal-role-powershell.md
-    - name: 3. Een hostpool maken met Azure Marketplace
+    - name: 3. Een hostpool maken met behulp van Azure Marketplace
       href: create-host-pools-azure-marketplace.md
     - name: 4. Appgroepen beheren
       href: manage-app-groups.md
