--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -46,6 +46,8 @@
           href: entitlement-management-request-access.md
         - name: Aanvragen goedkeuren
           href: entitlement-management-request-approve.md
+        - name: Taken delegeren
+          href: entitlement-management-delegate.md
         - name: Rapporten en logboeken weergeven
           href: entitlement-management-reports.md
         - name: Problemen oplossen
