--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -31,6 +31,14 @@
       href: search-get-started-python.md
 - name: Zelfstudies
   items:
+    - name: Uw eerste app maken
+      items:
+        - name: 1 - Eenvoudige zoekpagina
+          href: tutorial-csharp-create-first-app.md
+        - name: 2 - Resultatenpagina toevoegen
+          href: tutorial-csharp-paging.md
+        - name: 3 - Automatisch aanvullen toevoegen
+          href: tutorial-csharp-type-ahead-and-suggestions.md
     - name: Azure SQL Database indexeren
       href: search-indexer-tutorial.md
     - name: Azure JSON-blobs indexeren
